# AT-hackathon-backend

./: Procfile  db.sqlite3  manage.py  pyproject.toml
hackathon/: settings.py  urls.py
message/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_content.py
portfolio/: models.py
portfolio/migrations/: 0001_initial.py
rate/: models.py
rate/migrations/: 0001_initial.py
recommend/: admin.py  models.py  serializers.py  urls.py  views.py
recommend/migrations/: 0001_initial.py  0002_auto_20211204_2205.py
team/: admin.py  models.py  serializers.py  urls.py  views.py
team/migrations/: 0001_initial.py  0002_team_category.py  0003_auto_20211204_2206.py  0004_team_subject.py  0005_team_image.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_auto_20211204_1747.py  0003_profile_portfolio.py  0004_auto_20211205_0244.py  0005_auto_20211205_0312.py
